# swagger.json
@@ -17,7 +17,7 @@
       "description": "User requests"
     }
   ],
-  "schemes": ["http", "https"],
+  "schemes": ["https", "http"],
   "paths": {
     "/builds": {
       "get": {
@@ -27,6 +27,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "No Builds Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -111,6 +117,9 @@
           "201": {
             "description": "Created"
           },
+          "400": {
+            "description": "Missing Required Fields"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -133,6 +142,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "ID Required"
+          },
+          "404": {
+            "description": "Invalid ID"
           }
         }
       },
@@ -223,6 +238,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -242,6 +260,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
